# NNstudy

./: CMakeLists.txt  activationFunctions.hpp  kernels.cuh  main.cpp  matrix.cpp  matrix.hpp  matrixCUDA.cpp  matrixCUDA.cu  matrixCUDA.cuh  matrixCUDA.h  matrixCUDA.hpp  perceptron.cpp  perceptron.hpp
arch-docs/: math-arch.d2
concurrency/: CMakeLists.txt  processor.cpp  processor.hpp
layers/: activationFunctions.hpp  perceptron.cu
math/: CMakeLists.txt
math/include/math/: MathFactory.hpp  MathFactoryProvider.hpp  matrix.hpp
math/include/math/backends/cpu/: CPUFactory.hpp  matrixCPU.hpp
math/include/math/backends/cuda/: CUDAFactory.hpp  matrixCUDA.hpp
math/src/backends/cpu/: matrixCPU.cpp
math/src/backends/gpu/: matrixCUDA.cpp
parallel/: CMakeLists.txt
parallel/cuda_kernels/: CMakeLists.txt  kernels.cu
parallel/include/: common_kernels.hpp
tests/: test_math.cpp
utils/: CMakeLists.txt  log.cpp
